# Create-Agents-AI

./: .env.example  .gitignore  .pre-commit-config.yaml  404.html  CHECKLIST.md  CI_CD_SETUP.md  DFP_INDEX_metrics.jsonl  LICENSE  PYPI_QUICKSTART.md  README.md  RELATORIO_FINAL_TOOLS.md  index.html  main.py  mkdocs.yml  notebook_index.faiss  notebook_index.jsonl  notebook_index_metrics.jsonl  notebook_index_stats.json  pyproject.toml  pytest.ini  rag_metrics.jsonl  sitemap.xml
.agent/: feature_roadmap.md.resolved
.agent/docs/: logging_standardization_complete.md
.agent/plans/: context_aware_logging_implementation.md
.agent/rules/: dev-tester.md  docs-architect.md  senior_dev.md
.github/workflows/: ci.yml  docs.yml  pipeline.yml  publish.yml
dev-guide/architecture-developer/: index.html
dev-guide/async-guide/: index.html
dev-guide/cli-architecture/: index.html
dev-guide/contribute/: index.html
dev-guide/logging_guide/: index.html
dev-guide/technical-examples/: index.html
docs/: ARQUITETURA_COMPLETA_TOOLS.md  MELHORIAS_TOOLS_IMPLEMENTADAS.md  MIGRATION_GUIDE.md  OPTIMIZATION_SUMMARY.md  RELATORIO_TESTES_MULTI_MODEL.md  api.md  arquitetura.md  ci-cd.md  index.md  tools.md
docs/TO-DO/: checklist.md  fazer.md
docs/assets/javascripts/: wide-toggle.js
docs/assets/stylesheets/: custom.css
docs/dev-guide/: architecture-developer.md  async-guide.md  cli-architecture.md  contribute.md  logging_guide.md  observability_dashboard_plan.md  technical-examples.md  trace_dashboard_plan.md  tracing_implementation_plan.md
docs/guia/: exemplos.md  instalacao.md  uso-basico.md
docs/logs/: logging_guia_iniciantes.md
docs/reference/: api.md  commands.md  metrics-api.md  streaming-api.md  tools.md
docs/user-guide/: basic-usage-user.md  cli-usage.md  examples-user.md  faq-user.md  installation-user.md  streaming-guide.md
examples/: __init__.py  chat.py  lazy_loading_demo.py  opentelemetry_tracing.py  test.py  test_agent.py  test_logs.py  test_providers.py  tool_choice_example.py  tool_with_pydantic.py  toolfilterparquet.py  tracing_examples.py
examples/dashboard/: __init__.py  app.py  loader.py  trace_generator.py
reference/api/: index.html
reference/commands/: index.html
reference/metrics-api/: index.html
reference/streaming-api/: index.html
reference/tools/: index.html
search/: search_index.json
src/: __init__.py
src/application/: __init__.py
src/application/dtos/: agent_dtos.py
src/application/interfaces/: chat_repository.py
src/application/use_cases/: __init__.py  chat_with_agent.py  create_agent.py  format_instructions_use_case.py  get_all_available_tools.py  get_available_tools.py  get_config_agents.py  get_system_available_tools.py
src/arcadiumai/: __init__.py
src/arcadiumai/domain/: __init__.py
src/arcadiumai/infra/: __init__.py
src/arcadiumai/utils/: __init__.py  text_sanitizer.py
src/createagents/: __init__.py
src/createagents/application/: __init__.py
src/createagents/domain/: __init__.py
src/createagents/infra/: __init__.py
src/createagents/logging/: __init__.py
src/createagents/main/: __init__.py
src/createagents/tracing/: __init__.py
src/createagents/utils/: text_sanitizer.py
src/domain/: __init__.py
src/domain/entities/: agent_domain.py
src/domain/exceptions/: __init__.py  domain_exceptions.py
src/domain/services/: tool_executor.py
src/domain/value_objects/: __init__.py  base_tools.py  chat_response.py  configs_validator.py  history.py  message.py  providers.py
src/infra/: __init__.py
src/infra/adapters/: __init__.py
src/infra/config/: __init__.py  available_tools.py  environment.py  logging_config.py  metrics.py  retry.py
src/infra/factories/: chat_adapter_factory.py
src/main/: __init__.py
src/main/composers/: agent_composer.py
src/presentation/: agent_controller.py
src/utils/: text_sanitizer.py
tests/: conftest.py  test_lazy_loading.py
tests/application/dtos/: test_agent_dtos.py  test_streaming_response_dto.py
tests/application/facade/: test_client.py
tests/application/interfaces/: test_chat_repository.py
tests/application/services/: test_agent_service.py
tests/application/use_cases/: test_chat_with_agent.py  test_create_agent.py  test_get_all_available_tools.py  test_get_config_agents.py  test_get_system_available_tools.py  test_tool_choice.py
tests/domain/entities/: test_agent_domain.py
tests/domain/exceptions/: test_domain_exceptions.py
tests/domain/interfaces/: test_logger_interface.py
tests/domain/services/: test_tool_executor.py
tests/domain/value_objects/: test_base_tools.py  test_chat_response.py  test_configs_validator.py  test_history.py  test_message.py  test_providers.py  test_schema_utils.py  test_tool_decorator.py
tests/embeddings_tests/: CHECKLIST_IMPLEMENTACAO.md  README.md  README_PRINCIPAL.md  RESUMO_EXECUTIVO.md  ROADMAP_BIG_TECH.md  atualizar_metadata.py  chat.py  exemplo_embeddings.ipynb  exemplo_uso_rag_avancado.py  indexar.py  main.py  perguntar.py  rag_metrics.jsonl  test_rag.py
tests/fixtures/: sample_text.txt
tests/infra/adapters/: test_ollama_chat_adapter.py  test_openai_chat_adapter.py
tests/infra/config/: test_available_tools.py  test_environment.py  test_environment_thread_safety.py  test_logging_config.py  test_metrics.py  test_retry.py  test_sensitive_data_filter.py  test_standard_logger.py  test_trace_logger.py
tests/infra/factories/: test_chat_adapter_factory.py
tests/infra/stores/: test_trace_stores.py
tests/integration/: test_agent_integration.py  test_client_ollama_integration.py  test_client_openai_integration.py  test_factory_integration.py  test_structured_tool_integration.py
tests/integration/fixtures/: large_file.txt
tests/presentation/: test_agent_controller.py
tests/tools_tests/: filtro_parquet.py
tests/utils/: test_text_sanitizer.py
user-guide/basic-usage-user/: index.html
user-guide/cli-usage/: index.html
user-guide/examples-user/: index.html
user-guide/faq-user/: index.html
user-guide/installation-user/: index.html
user-guide/streaming-guide/: index.html
(+307 files in other folders)
