[tool.poetry]
name = "arcadiumai"
version = "0.1.0"
description = "Enterprise-grade modular system for creating AI agents"
authors = ["Jordan Estralioto <estraliotojordan@gmail.com>"]
readme = "README.md"
license = "MIT"
packages = [{ include = "arcadiumai", from = "src" }]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries"
]


[tool.poetry.dependencies]
python = "^3.11"
openai = "^2.7.1"
python-dotenv = "^1.1.1"
ollama = "^0.6.0"
defusedxml = "^0.7.1"

# Optional dependencies for file reading tools
tiktoken = {version = "^0.8.0", optional = true}
unstructured = {version = "^0.16.9", extras = ["pdf", "docx", "pptx"], optional = true}
pandas = {version = "^2.2.3", optional = true}
openpyxl = {version = "^3.1.5", optional = true}
pyarrow = {version = "^18.1.0", optional = true}
chardet = {version = "^5.2.0", optional = true}

[tool.poetry.extras]
file-tools = ["tiktoken", "unstructured", "pandas", "openpyxl", "pyarrow", "chardet"]
all = ["tiktoken", "unstructured", "pandas", "openpyxl", "pyarrow", "chardet"]

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.3.0"
pytest = "^8.4.2"
pytest-cov = "^5.0.0"
mypy = "^1.11.0"
bandit = "^1.7.9"
pydocstyle = "^6.3.0"
detect-secrets = "^1.4.0"
mkdocs = "^1.6.1"
mkdocs-material = "^9.6.22"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pydocstyle]
convention = "google"
match = "(?!test_).*\\.py"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
