[project]
name = "createagents"
version = "0.1.0"
description = "Enterprise-grade modular system for creating AI agents"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Jordan Estralioto", email = "estraliotojordan@gmail.com" }
]
keywords = ["ai", "agents", "framework", "orchestration"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries"
]


requires-python = ">=3.12,<4.0"

dependencies = [
    "openai>=2.7.1,<3.0.0",
    "python-dotenv>=1.1.1,<2.0.0",
    "ollama>=0.6.0,<1.0.0",
    "defusedxml>=0.7.1,<1.0.0"
]

[project.optional-dependencies]
file-tools = [
    "tiktoken>=0.8.0",
    "unstructured[pdf,docx,pptx]>=0.16.9",
    "pandas>=2.2.3",
    "openpyxl>=3.1.5",
    "pyarrow>=18.1.0",
    "chardet>=5.2.0"
]
all = [
    "tiktoken>=0.8.0",
    "unstructured[pdf,docx,pptx]>=0.16.9",
    "pandas>=2.2.3",
    "openpyxl>=3.1.5",
    "pyarrow>=18.1.0",
    "chardet>=5.2.0"
]

[project.urls]
Homepage = "https://github.com/jor0105/Create-Agents-AI"
Repository = "https://github.com/jor0105/Create-Agents-AI"
Documentation = "https://github.com/jor0105/Create-Agents-AI"
"Bug Tracker" = "https://github.com/jor0105/Create-Agents-AI/issues"

[tool.setuptools.package-data]
createagents = ["*.txt", "*.md"]

[tool.poetry]
packages = [{ include = "createagents", from = "src" }]

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.3.0"
pytest = "^8.4.2"
pytest-cov = "^5.0.0"
mypy = "^1.11.0"
bandit = "^1.7.9"
pydocstyle = "^6.3.0"
detect-secrets = "^1.4.0"
mkdocs = "^1.6.1"
mkdocs-material = "^9.6.22"
mdformat = "^0.7.17"
mdformat-gfm = "^0.3.5"
ipykernel = "^7.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pydocstyle]
convention = "google"
match = "(?!test_).*\\.py"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
